# KalTest

./: AUTHORS  CMakeLists.txt  Makefile  README  README.md  setup
.github/workflows/: coverity.yml  key4hep.yml
cmake/: FindROOT.cmake  KalTest2Config.cmake.in  KalTest2ConfigVersion.cmake.in  KalTestConfig.cmake.in  KalTestConfigVersion.cmake.in  MacroCheckPackageLibs.cmake  MacroRootDict.cmake
conf/: makejsf.tmpl
doc/: ReleaseNotes.md
examples/: Makefile
examples/kaltest/: CMakeLists.txt  Makefile
examples/kaltest/cdc/: EXEventGen.cxx  EXEventGen.h  EXHit.cxx  EXHit.h  EXKalDetector.cxx  EXKalDetector.h  EXKalTest.cxx  EXKalTest.h  EXMeasLayer.cxx  EXMeasLayer.h  Imakefile  LinkDef.h
examples/kaltest/cdc/prod/: manyrun.sh  t0dep.sh
examples/kaltest/ct/: EXEventGen.cxx  EXEventGen.h  EXHit.cxx  EXHit.h  EXKalDetector.cxx  EXKalDetector.h  EXKalTest.cxx  EXMeasLayer.cxx  EXMeasLayer.h  EXToyGLD.cxx  EXToyGLD.h  EXVKalDetector.cxx  EXVKalDetector.h  Imakefile  LinkDef.h  h.root
examples/kaltest/ct/prod/: pdep.sh  t0dep.sh
examples/kaltest/ct_nonuniform/: EXEventGen.cxx  EXEventGen.h  EXHYBTrack.cxx  EXHYBTrack.h  EXKalDetector.cxx  EXKalDetector.h  EXKalTest.cxx  EXMeasLayer.cxx  EXMeasLayer.h  EXRKEventGen.cxx  EXRKEventGen.h  EXRungeKuttaEventGen.cxx  EXRungeKuttaEventGen.h  EXVKalDetector.h
examples/kaltest/hybrid/: CMakeLists.txt  Makefile
examples/kaltest/hybrid/bp/: EXBPConeHit.cxx  EXBPConeHit.h  EXBPConeMeasLayer.cxx  EXBPConeMeasLayer.h  EXBPHit.cxx  EXBPHit.h  EXBPKalDetector.cxx  EXBPKalDetector.h  EXBPMeasLayer.cxx  EXBPMeasLayer.h  LinkDef.h
examples/kaltest/hybrid/it/: EXITFBHit.cxx  EXITFBHit.h  EXITFBMeasLayer.cxx  EXITFBMeasLayer.h  EXITHit.cxx  EXITHit.h  EXITKalDetector.cxx  EXITKalDetector.h  EXITMeasLayer.cxx  EXITMeasLayer.h  Imakefile  LinkDef.h
examples/kaltest/hybrid/kern/: EXHYBTrack.cxx  EXHYBTrack.h  EXVKalDetector.cxx  EXVKalDetector.h  EXVMeasLayer.cxx  EXVMeasLayer.h  Imakefile  LinkDef.h
examples/kaltest/hybrid/main/: EXKalTest.cxx  Imakefile
examples/kaltest/hybrid/main/prod/: Plot.C  manyrun.sh  pdep.sh  t0dep.sh
examples/kaltest/hybrid/old_it/: EXITDict.cxx  EXITDict.h  EXITFBHit.cxx  EXITFBHit.h  EXITFBMeasLayer.cxx  EXITFBMeasLayer.h  EXITKalDetector.cxx  EXITMeasLayer.h  Imakefile  Makefile  Makefile.bak  libEXIT.so.2005  libEXIT.so.2005.01
examples/kaltest/hybrid/old_vtx/: EXVTXDict.cxx  EXVTXDict.h  EXVTXHit.cxx  EXVTXKalDetector.cxx  EXVTXKalDetector.h  EXVTXMeasLayer.h  LinkDef.h  Makefile  Makefile.bak  libEXVTX.so.2005  libEXVTX.so.2005.01
examples/kaltest/hybrid/tpc/: EXTPCHit.cxx  EXTPCHit.h  EXTPCKalDetector.cxx  EXTPCKalDetector.h  EXTPCMeasLayer.cxx  EXTPCMeasLayer.h  Imakefile
examples/kaltest/hybrid/vtx/: EXVTXHit.cxx  EXVTXHit.h  EXVTXKalDetector.cxx  EXVTXKalDetector.h  EXVTXMeasLayer.cxx  EXVTXMeasLayer.h  Imakefile
examples/kaltest/simple/: EXHit.cxx  EXHit.h  EXKalSite.cxx  EXKalSite.h  EXKalState.cxx  EXKalState.h  EXKalSystem.cxx  EXKalSystem.h  EXKalTest.cxx  EXKalTest.h  Imakefile  LinkDef.h
src/: CMakeLists.txt  Makefile
src/bfield/: LinkDef.h  TBField.cxx  TBField.h  TRKMagField.cxx  TRKMagField.h
src/geomlib/: Imakefile  LinkDef.h  TCircle.cxx  TCircle.h  TCylinder.cxx  TCylinder.h  THelicalTrack.cxx  THelicalTrack.h  THype.cxx  THype.h  TPlane.cxx  TPlane.h  TRKTrack.cxx  TRKTrack.h  TRungeKuttaTrack.cxx  TRungeKuttaTrack.h  TStraightTrack.cxx  TStraightTrack.h  TTube.cxx  TTube.h  TVCurve.h  TVSolid.h  TVSurface.cxx  TVSurface.h  TVTrack.cxx  TVTrack.h
src/kallib/: Imakefile  TKalMatrix.cxx  TKalMatrix.h  TVKalSite.cxx  TVKalSite.h  TVKalState.cxx  TVKalState.h  TVKalSystem.cxx  TVKalSystem.h
src/kaltracklib/: Imakefile  KalTrackDim.h  LinkDef.h  TKalDetCradle.cxx  TKalDetCradle.h  TKalFilterCond.cxx  TKalFilterCond.h  TKalTrack.cxx  TKalTrack.h  TKalTrackSite.cxx  TKalTrackSite.h  TKalTrackState.cxx  TKalTrackState.h  TTrackFrame.cxx  TTrackFrame.h  TVKalDetector.cxx  TVKalDetector.h  TVMeasLayer.cxx  TVMeasLayer.h  TVTrackHit.cxx  TVTrackHit.h
src/utils/: Imakefile  J4Timer.cxx  J4Timer.h  LinkDef.h  TAttDrawable.h  TAttElement.h  TAttLockable.h  TObjNum.cxx  TObjNum.h
